Fixed word group menu display

--- a/sbmeteorapp.html
+++ b/sbmeteorapp.html
@@ -109,14 +109,14 @@
     </ul>
 
     <div class="row group-menu">
-      <div style="visibility: {{hidePreviousGroupArrow}};">
+      <div class="col-xs-2" style="visibility: {{hidePreviousGroupArrow}};">
 
         <button type="button" class="btn previous-word-group pull-left">
           <h2><span class="glyphicon glyphicon-menu-left"></span></h2>
         </button>
 
       </div>
-      <div class="text-center"> <!-- style="visibility: {{hideGroupMenu}};"> -->
+      <div class="col-xs-8 text-center"> <!-- style="visibility: {{hideGroupMenu}};"> -->
 
         <!--
         <ul class="list-inline word-group">
@@ -131,7 +131,7 @@
         {{> playMenu}}
 
       </div>
-      <div style="visibility: {{hideNextGroupArrow}};">
+      <div class="col-xs-2" style="visibility: {{hideNextGroupArrow}};">
 
         <button type="button" class="btn next-word-group pull-right">
           <h2><span class="glyphicon glyphicon-menu-right"></span></h2>
