--- a/sbmeteorapp.html
+++ b/sbmeteorapp.html
@@ -40,8 +40,7 @@
 
 
 <template name="wordSetShow">
-
-  <h4>Lesson {{lessonNumber}}: {{lessonTitle}}</h4>
+  <h3>Lesson {{lessonNumber}}: {{lessonTitle}}</h3>
   <hr>
 
   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="false">
@@ -71,41 +70,6 @@
             </li>
             {{/each}}
           </ul>
-
-          <ul class="list-inline group-menu">
-          </ul>
-
-          <div class="row group-menu">
-            <div class="col-xs-2" style="visibility: {{hidePreviousGroupArrow}};">
-
-              <button type="button" class="btn previous-word-group pull-left">
-                <h2><span class="glyphicon glyphicon-menu-left"></span></h2>
-              </button>
-
-            </div>
-            <div class="col-xs-8 text-center"> <!-- style="visibility: {{hideGroupMenu}};"> -->
-
-              <!--
-              <ul class="list-inline word-group">
-                {{#each groups}}
-                <li>
-                  <button type="button" class="btn btn-default btn-word-group {{activeGroup}}" style="outline: none;">{{group}}</button>
-                </li>
-                {{/each}}
-              </ul>
-              -->
-
-              {{> playMenu}}
-
-            </div>
-            <div class="col-xs-2" style="visibility: {{hideNextGroupArrow}};">
-
-              <button type="button" class="btn next-word-group pull-right">
-                <h2><span class="glyphicon glyphicon-menu-right"></span></h2>
-              </button>
-            </div>
-          </div>
-
         </div>
       </div>
     </div>
@@ -125,13 +89,92 @@
         </div>
       </div>
     </div>
+
+  </div>
+
+  <div class="row play-menu">
+    <div class="col-xs-2" style="visibility: {{hidePreviousGroupArrow}};">
+
+      <button type="button" class="btn previous-word-group pull-left">
+        <h2><span class="glyphicon glyphicon-menu-left"></span></h2>
+      </button>
+
+    </div>
+    <div class="col-xs-8 text-center"> <!-- style="visibility: {{hideGroupMenu}};"> -->
+
+      <!--
+      <ul class="list-inline word-group">
+        {{#each groups}}
+        <li>
+          <button type="button" class="btn btn-default btn-word-group {{activeGroup}}" style="outline: none;">{{group}}</button>
+        </li>
+        {{/each}}
+      </ul>
+      -->
+
+      {{> playMenu}}
+
+    </div>
+    <div class="col-xs-2" style="display: {{hideNextGroupArrow}};">
+
+      <button type="button" class="btn pull-next next-word-group">
+        <h2><span class="glyphicon glyphicon-menu-right"></span></h2>
+      </button>
+    </div>
+
+    <div class="col-xs-2" style="display: {{hideNextQuizArrow}};">
+
+      <button type="button" class="btn pull-next next-quiz">
+        <h2><span class="glyphicon glyphicon-menu-right"></span></h2>
+      </button>
+    </div>
+
   </div>
  
 </template>
 
 
+<template name="quiz">
+  <p>
+    Current Score: {{totalCorrect}} / {{totalTaken}}
+    <br>
+    {{#if submitted}}
+      {{#if newScore}}
+        Good job! You got the whole sentence right :)
+      {{else}}
+        Not quite!
+      {{/if}}
+    {{/if}}
+  </p>
+
+  <p class="text-center">
+  {{#with sentence}}
+  <button class="audio btn btn-play-quiz">
+    <audio src="{{sentence.url}}" ></audio>
+    <span class="glyphicon glyphicon-play-circle"></span>
+  </button>
+  <br>
+  ({{sentence.sentence}}) <!-- Temporary for testing code -->
+  {{/with}}
+  </p>
+
+  <form role="form" class="user-guess">
+    <div class="row">
+      <div class="form-group col-lg-6">
+        <div class="input-group">
+          <span class="input-group-btn">
+            <button type="submit" value="submit" class="user-guess btn btn-default" {{activeQuizSubmit}}>Check</button>
+          </span>
+          <input type="text" name="text" class="user-guess form-control" placeholder="Type what you hear.">
+        </div><!-- /input-group -->
+      </div>
+    </div>
+  </form>
+</template>
+
+
 <template name="playMenu">
-  <button type="button" class="btn sound-menu" data-toggle="modal" data-target="#playMenu">
+  <button type="button" class="btn" data-toggle="modal" data-target="#playMenu" onclick="return false;">
     <h2><span class="glyphicon glyphicon-cog"></span></h2>
   </button>
 
@@ -161,45 +204,6 @@
       </div>
     </div>
   </div>
-</template>
-
-
-<template name="quiz">
-  <p>
-    Current Score: {{totalCorrect}} / {{totalTaken}}
-    <br>
-    {{#if submitted}}
-      {{#if newScore}}
-        Good job! You got the whole sentence right :)
-      {{else}}
-        Not quite!
-      {{/if}}
-    {{/if}}
-  </p>
-
-  {{#with sentence}}
-  <button class="audio btn btn-default">
-    {{sentence.sentence}}
-    <span class="glyphicon glyphicon-play"></span>
-    <audio src="{{sentence.url}}" ></audio>
-  </button>
-  {{/with}}
-  <br>
-
-  <form role="form" class="user-guess">
-    <div class="row">
-      <div class="form-group col-lg-6">
-        <div class="input-group">
-          <span class="input-group-btn">
-            <button type="submit" value="submit" class="user-guess btn btn-default" {{activeQuizSubmit}}>Check</button>
-          </span>
-          <input type="text" name="text" class="user-guess form-control" placeholder="Type what you hear.">
-        </div><!-- /input-group -->
-      </div>
-    </div>
-  </form>
-
-  <button class="quiz-next btn btn-default">Continue</button> 
 </template>
 
 
